--- a/webapp/package.json
+++ b/webapp/package.json
@@ -57,9 +57,13 @@
   "dependencies": {
     "core-js": "3.33.3",
     "mattermost-redux": "5.33.1",
+    "prop-types": "^15.8.1",
     "react": "^16.14.0",
+    "react-intl": "^5.25.1",
     "react-redux": "8.1.3",
+    "react-router-dom": "^5.3.4",
     "redux": "4.2.1",
+    "tslib": "^2.6.2",
     "typescript": "4.6.4"
   },
   "jest": {
