--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,5 +1,7 @@
 load("@bazel_gazelle//:def.bzl", "gazelle")
 load("@rules_go//go:def.bzl", "go_library")
+load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
+load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
 load("@bazel_env.bzl", "bazel_env")
 
 bazel_env(
@@ -20,4 +22,54 @@ go_library(
     importpath = "github.com/itstar-tech/mattermost-reactions",
     visibility = ["//visibility:public"],
     deps = ["@com_github_mattermost_mattermost_server_public//model"],
+)
+
+copy_to_bin(
+    name = "plugin_json_in_bin",
+    srcs = ["plugin.json"],
+    visibility = ["//webapp:__pkg__"],
+)
+
+pkg_tar(
+    name = "server_dist",
+    srcs = ["//server:binaries"],
+    package_dir = "server/dist",
+    strip_prefix = "",
+)
+
+pkg_tar(
+    name = "webapp_dist",
+    srcs = ["//webapp:main"],
+    package_dir = "webapp/dist",
+    strip_prefix = "webapp/main",
+)
+
+pkg_tar(
+    name = "assets",
+    srcs = glob(["assets/**"]),
+    package_dir = "assets",
+    strip_prefix = "assets",
+)
+
+pkg_tar(
+    name = "public",
+    srcs = glob(["public/**"]),
+    package_dir = "public",
+    strip_prefix = "public",
+)
+
+pkg_tar(
+    name = "dist",
+    srcs = [
+        "plugin.json",
+    ],
+    extension = "tar.gz",
+    package_dir = "",
+    visibility = ["//visibility:public"],
+    deps = [
+        ":assets",
+        ":public",
+        ":server_dist",
+        ":webapp_dist",
+    ],
 )
